2007-10-22  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #6340: JS errors with dividers2tabs and rtehtmlarea

2007-10-22  Thomas Hempel  <thomas@typo3-unleashed.net>

	* Fixed bug: #1575: Page-Title maxlength does not fit into database-field tinytext (Thanks to Georg Ringer)

2007-10-21  Benjamin Mack  <mack@xnos.org>

	* (minor) indexed_search - Added more info where the manual can be found

2007-10-21  Thomas Hempel <thomas@typo3-unleashed.net>
	
	* Fixed bug: #6531: Function getUpdateJS doesn't work properly (Thanks to Philip Almeida)
	* Fixed bug: #434: function getUpdateJS produce JS error messages
	
2007-10-20  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #6559: Spelling error in Object Browser

2007-10-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #5949: BE-Shortcut to Tools->User Admin returns error (Thanks to Oliver Hader)
	* Fixed bug #6210: UserTSConfig value "options.moduleMenuCollapsable=0" does not work.
	* Fixed bug #6071: Switch to User does not work from context menu in List Module. (Thanks to Christian Kuhn all patches above!)
	* Fixed bug #6553: Remove hardcoded strip_tags() from image altText and replacing it with TS stripHtml = 1 (Thanks to Georg Ringer)
	* Fixed bug: stdWrap for imgMax is not taken into account. (Thanks to Helmut Hummel)

2007-10-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 6546: Remove htmlArea RTE acronym from Insert-Record object

2007-10-18  Ingo Renner  <ingo@typo3.org>

	* Fixed bug 6526: Update prototype and scriptacolous

2007-10-17  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Move styleWithCSS setting to the initialization phase of the htmlArea editor
	* Elminate list of plugins in rtehtmlarea EM configuration

2007-10-13  Ingo Renner  <ingo@typo3.org>

	* Fixed bug 6540: add icons and grouping to the content element selector

2007-10-17  Michael Stucki  <michael@typo3.org>
