@@ -1,3 +1,7 @@
+2007-10-21  Benjamin Mack  <mack@xnos.org>
+
+	* (feature) added function to include javascript libraries in the backend
+
 2007-10-22  Andreas Otto  <andreas.otto@dkd.de>
 
 	* Fixed bug #6340: JS errors with dividers2tabs and rtehtmlarea
